Actions
Bug #11412
closedpwck: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
pwck.c: In function 'main': pwck.c:128:22: error: comparison between pointer and integer [-Werror] for (i = 0; buf[i] != NULL; i++) ^~ pwck.c:139:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] delim[7] = NULL; ^ pwck.c:194:17: error: comparison between pointer and integer [-Werror] if (logbuf[0] == NULL) ^~ pwck.c:214:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] logbuf[j] = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ff449c69af060b9ec3cc03b550bd8f501dd6eb97
commit ff449c69af060b9ec3cc03b550bd8f501dd6eb97 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-26T05:45:38.000Z 11412 pwck: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions